# obsidian-llm-wiki-local

./: CHANGELOG.md  README.md  pyproject.toml
scripts/: smoke_test.sh
src/obsidian_llm_wiki/: cli.py  client_factory.py  config.py  global_config.py  indexer.py  markdown_math.py  models.py  ollama_client.py  openai_compat_client.py  protocols.py  providers.py  state.py  structured_output.py  vault.py
src/obsidian_llm_wiki/pipeline/: compile.py  ingest.py  lint.py  maintain.py  orchestrator.py  query.py
tests/: test_benchmarks.py  test_cli_reject.py  test_cli_support.py  test_compile.py  test_compile_v2.py  test_config.py  test_ingest.py  test_maintain.py  test_markdown_math.py  test_orchestrator.py  test_pipeline_language.py  test_pipeline_reject_all.py  test_providers.py  test_query.py  test_setup.py  test_state.py  test_structured_output.py
tests/fixtures/: analysis_valid.json
